# chemotools.docs

./: .gitignore  Gemfile  README.md  Taskfile.yml  _config.yml  index.html  index.md  pyproject.toml  requirements.txt
.github/workflows/: documentation.yml
_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  objects.inv  search.html  searchindex.js  usage.html
_build/html/.doctrees/: environment.pickle  index.doctree  usage.doctree
_build/html/_get_started/: _index.html  index.html  install.html
_build/html/_methods/: _index.html  index.html  methods.html
_build/html/_notebooks/: tutorial.html  tutorial.ipynb
_data/: navigation.yml
_data/es/: navigation.yml
_includes/: language-selector.html  masthead.html
_pages/: about.md
_pages/en/: 404.md  about.md  index.html
_pages/es/: about.md  index.html
_posts/: 2024-01-27-welcome-post.md
_posts/en/: 2024-01-27-welcome-post.md
_posts/es/: 2024-01-27-machine-learning-basics.md  2024-01-27-welcome-post.md
_sass/minimal-mistakes/: _custom.scss
chemotools/baseline/: _air_pls.py  _ar_pls.py  _as_ls.py  _cubic_spline_correction.py  _linear_correction.py
chemotools/datasets/: _base.py
chemotools/derivative/: _savitzky_golay.py
chemotools/feature_selection/: _range_cut.py
chemotools/scale/: _point_scaler.py
chemotools/scatter/: _extended_multiplicative_scatter_correction.py  _standard_normal_variate.py
chemotools/smooth/: _mean_filter.py
docs/docs/source/: conf.py  (+1 more)
docs/locale/: README.md
docs/outliers/: _dmodx.py
docs/source/: conf.py  example.rst  index.rst  usage.rst
(+377 files in other folders)
