[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Pau Cabaneros <pau.cabaneros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sphinx = "^8.1.3"
pydata-sphinx-theme = "^0.16.1"
sphinx-copybutton = "^0.5.2"
nbsphinx = "^0.9.6"
ipykernel = "^6.29.5"
chemotools = "^0.1.9"
sphinx-design = "^0.6.1"
sphinxcontrib-youtube = "^1.4.1"


[tool.poetry.group.dev.dependencies]
sphinx-autobuild = "^2024.10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
