[project]
name = "docs"
version = "0.1.0"
description = ""
authors = [{ name = "Pau Cabaneros", email = "pau.cabaneros@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "sphinx-intl>=2.3.2",
]

[dependency-groups]
dev = ["sphinx-autobuild>=2024.10.3,<2025"]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "nbsphinx",
    "ipykernel",
    "chemotools",
    "sphinx-design",
    "sphinxcontrib-youtube",
]

